# showcase-projects

./: README.md
c++/learning-concurrency/: README.md
c++/learning-concurrency/atomic_types/: README.md  main.cpp
c++/learning-concurrency/worker_threads/: README.md  main.cpp
c++/prime-numbers/: .gitignore  README.md
c++/prime-numbers/1. default-method/: main.cpp
c++/prime-numbers/2. sieve-method/: main  main.cpp
c++/prime-numbers/3. sundaram-sieve-method/: main  main.cpp
c++/worker-threads/: README.md  main.cpp  workers.cpp  workers.h
c/idatt2101-algorithms-and-datastructures/: README.md
c/rubiks-cube/: Makefile  README.md  main.c  rubiks_cube.h  square.h  types.h
java/server-networking/: .gitignore  JavaSSLClient.java  JavaSSLServer.java  README.md  Server.java  ServerUDP.java  WebServer.java  tls-capture.pcapng
python/compression-algorithms/: huffman.py  run.txt
python/hash-set/: oppgave2.py
python/idatt2101-algorithms-and-datastructures/: README.md  lz.py  node.py
rust/prime-numbers/: README.md
rust/prime-numbers/channels-method/: Cargo.toml  README.md
rust/prime-numbers/channels-method/src/: main.rs
web/3d-render-engine/: README.md  controls.js  index.html  shapes.js  threedee.js  vector.js
web/cartesian-vectors-js/: README.md  vector.js
web/simple-air-particle-simulation/: eventloop.js  index.html  main.js  particle.js  startup.js  useful.js  vector.js
zig/hashset-datastructure/: example.txt  hash_set.zig  oppgave1.zig
zig/linked-list-and-stack-datastructure/: invalid2.txt  stack.zig  valid.txt
(+26 files in other folders)
