[package]
name = "primes-channels-threads"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
crossbeam-channel = "0.5.6"

[profile.release]
opt-level = 3